Tweak wording on csv import

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <div class="panel-body">
                           <p>TODO: split this into an import page - will be shared through app by DataService</p>
                           <p>File imports and stuff:</p>
-                          <p><em>All data will remain private, and will not be uploaded to any servers, or in any way transmitted. Source code can be inspected on the <a href="https://github.com/Oblongmana/diabetic-analytics">Github Repository</a></em></p>
+                          <p><em>This file will remain private, and will not be uploaded to any servers, or in any way transmitted. Source code can be inspected on the <a href="https://github.com/Oblongmana/diabetic-analytics">Github Repository</a></em></p>
                           <p>
                             <label class="btn btn-default" for="csvFileSelector">
                                 <input id="csvFileSelector" onchange='$("#csvFileSelectorInfo").html($(this)[0].files[0].name);' type="file" ng-model="csvToImport" style="display:none;">
