--- a/index.html
+++ b/index.html
@@ -38,51 +38,27 @@
     <!-- /Header -->
 
     <!-- Main -->
-    <div class="container-fluid" ng-app="diabeticAnalytics" ng-controller="csvImportController">
-        <div class="row">
-            <div class="col-sm-3">
-                <!-- Left column -->
-                <ul class="nav nav-pills nav-stacked">
-                    <li class="nav-header"></li>
-                    <li><a href="#"><i class="fa fa-area-chart"></i> Average Blood Glucose ( <em>AUC<sub>t</sub></em> )</a></li>
-                </ul>
-
-            </div>
-            <!-- /col-3 -->
-
-            <div class="col-sm-9">
-
-                
-                <strong><i class="fa fa-area-chart"></i> Average Blood Glucose ( <em>AUC<sub>t</sub></em> )</a></strong>
-                <hr>
-
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                          <h4>Notices</h4>
-                        </div>
-                        <div class="panel-body">
-                          <p>TODO: split this into an import page - will be shared through app by DataService</p>
-                          <p>File imports and stuff:</p>
-                          <p><em>This file will remain private, and will not be uploaded to any servers, or in any way transmitted. Source code can be inspected on the <a href="https://github.com/Oblongmana/diabetic-analytics">Github Repository</a></em></p>
-                          <p>
-                            <label class="btn btn-default" for="csvFileSelector">
-                                <input id="csvFileSelector" onchange='$("#csvFileSelectorInfo").html($(this)[0].files[0].name);' type="file" ng-model="csvToImport" style="display:none;">
-                                Choose CSV File
-                            </label>
-                            <span class='label label-info' id="csvFileSelectorInfo"></span>
-                          </p>
-                          <p><button class="btn btn-default" type="button" ng-click="loadData()">Test Import</button></p>
-                          <p ng-cloak="true" ng-show="debug_lineOneBglDump">{{debug_lineOneBglDump}}</p>
-                        </div>
-                    </div>
-                  </div>
-                </div>
-                <!--/row-->
-            </div>
-            <!--/col-span-9-->
+    <div class="container-fluid" ng-app="diabeticAnalytics" >
+      <div class="row">
+        <div class="col-sm-3">
+          <!-- Left column -->
+          <ul class="nav nav-pills nav-stacked">
+            <li class="nav-header"></li>
+            <li><a ui-sref="import"><i class="fa fa-table"></i> Import Data</a></li>
+            <li><a ui-sref="average-bgl-auct"><i class="fa fa-area-chart"></i> Average Blood Glucose ( <em>AUC<sub>t</sub></em> )</a></li>
+          </ul>
         </div>
+        <!-- /col-3 -->
+
+        <div class="col-sm-9">
+          <!-- primary view -->
+          <div class="ui-view">
+
+          </div>
+          <!--/row-->
+        </div>
+        <!--/col-span-9-->
+      </div>
     </div>
     <!-- /Main -->
 
